@startuml

skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

left to right direction

package presentation {
    class UpdateClassUI {
    }
}

package ecourseclassmanagement {

    package application{

        class ListAvailableSlotsForUpdateController {
            +getAvailableUpdateSlots(chosenClass)
        }

        class ListTeacherClassesController {
            +getTeacherClasses()
        }

        class UpdateClassController {
               +updateClass(class, chosenDate)
               +getAvailableUpdateSlots(chosenClass)
               +getTeacherClasses()
               +getAvailableTeacherCourses(): Iterable<Course>
        }


    }

     package repository {
            interface ClassRepository {
                +findTeacherRecurrentClasses(teacher): Iterable<RecurrentClass>
                +save(class)
            }
     }

    package domain {

        abstract Class {

        }

        class ClassDuration {
            - duration : Float
        }

        class ClassTitle {
            - title : String
        }

        class RecurrentClass {

        }

        enum RecurrentClassWeekday {
            MONDAY
            TUESDAY
            WEDNESDAY
            THURSDAY
            FRIDAY
        }


        class RecurrentClassTime {
            - time : Time
        }

        class RecurrentClassOccurrence {
            - date : Date
        }

        package services {

            class ClassScheduler {
                +getAvailableUpdateSlots(chosenClass, courses, teacher)
                +validateClassUpdate(chosenClass, newDate, courses, teacher) : boolean
                +updateClass(class, newDate)
            }
        }
    }
}

package ecoursecoursemanagement {

    package repository {
        interface CourseRepository {
            +findAvailableTeacherCourses(): Iterable<Course>
        }
    }

    package domain {

        class Course {
        }

    }

    package application {
        class ListTeacherCoursesController {
            +getAvailableTeacherCourses(): Iterable<Course>
        }
    }

}


package usermanagement {
    package repository {
        interface UserRepository {
        }
    }

    package application {
        class UserSessionService {
        + findECourseUserByUsername()
        }
    }

    package domain {
        class ECourseUser {
        }
    }
}

package EAPLIFRAMEWORK {
class SystemUser {
- username: String
- password: String
- name: String
- Email: String
- active: boolean
}

note bottom of SystemUser
  The properties of the user are simplified.
  In reality there is actually a Value Object
  for all the properties, expect the "active".
  Other not relevant properties are not being shown.
end note

ClassTitle --* Class
ClassDuration --* Class

RecurrentClassTime ---* RecurrentClass
RecurrentClassWeekday ---* RecurrentClass
RecurrentClassOccurrence "*" -- "1" RecurrentClass

UpdateClassUI .> UpdateClassController
UpdateClassController ...> ListTeacherCoursesController
UpdateClassController ...> ListAvailableSlotsForUpdateController
UpdateClassController ...> ListTeacherClassesController
UpdateClassController --> ClassScheduler

ListTeacherClassesController --> ClassRepository

ListAvailableSlotsForUpdateController --> UserSessionService
UserSessionService --> UserRepository
UserSessionService --> ECourseUser
ECourseUser ..> SystemUser

ListAvailableSlotsForUpdateController ....> ClassScheduler

ListTeacherCoursesController --> CourseRepository
ListTeacherCoursesController --> Course

RecurrentClass --|> Class

ClassScheduler -> ClassRepository

Class "*" -- "1" ClassRepository
Class "*" -- "1" Course
Class "*" -- "1" ECourseUser


@enduml